cmake_minimum_required(VERSION 3.3)
project(uniarchive2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

find_package(Qt5 REQUIRED COMPONENTS Core Xml)

set(SOURCE_FILES
        src/extraction/adium/extract_adium_conversations.cpp
        src/extraction/adium/extract_adium_conversations.h
        src/extraction/digsby/extract_digsby_conversations.cpp
        src/extraction/digsby/extract_digsby_conversations.h
        src/extraction/facebook/extract_facebook_dyi_conversations.cpp
        src/extraction/facebook/extract_facebook_dyi_conversations.h
        src/extraction/msn/extract_msn_messenger_xml_conversations.cpp
        src/extraction/msn/extract_msn_messenger_xml_conversations.h
        src/extraction/pidgin/common_extract_pidgin_conversations_code.cpp
        src/extraction/pidgin/common_extract_pidgin_conversations_code.h
        src/extraction/pidgin/extract_pidgin_html_conversations.cpp
        src/extraction/pidgin/extract_pidgin_html_conversations.h
        src/extraction/pidgin/extract_pidgin_txt_conversations.cpp
        src/extraction/pidgin/extract_pidgin_txt_conversations.h
        src/extraction/whatsapp/extract_whatsapp_email_conversations.cpp
        src/extraction/whatsapp/extract_whatsapp_email_conversations.h
        src/extraction/yahoo/extract_yahoo_messenger_dat_conversations.cpp
        src/extraction/yahoo/extract_yahoo_messenger_dat_conversations.h
        src/extraction/yahoo/ExtractYahooProtocolEventsIterator.cpp
        src/extraction/yahoo/ExtractYahooProtocolEventsIterator.h
        src/extraction/yahoo/YahooProtocolEvent.cpp
        src/extraction/yahoo/YahooProtocolEvent.h
        src/extraction/parse_libpurple_system_message.cpp
        src/extraction/parse_libpurple_system_message.h
        src/graphics/ANSIColor.cpp
        src/graphics/ANSIColor.h
        src/graphics/Color.cpp
        src/graphics/Color.h
        src/intermediate_format/content/ANSIColorTag.cpp
        src/intermediate_format/content/ANSIColorTag.h
        src/intermediate_format/content/ANSIResetTag.cpp
        src/intermediate_format/content/ANSIResetTag.h
        src/intermediate_format/content/BoldTag.cpp
        src/intermediate_format/content/BoldTag.h
        src/intermediate_format/content/CSSStyleTag.cpp
        src/intermediate_format/content/CSSStyleTag.h
        src/intermediate_format/content/EmphasisTag.cpp
        src/intermediate_format/content/EmphasisTag.h
        src/intermediate_format/content/FontTag.cpp
        src/intermediate_format/content/FontTag.h
        src/intermediate_format/content/RawMessageContent.cpp
        src/intermediate_format/content/RawMessageContent.h
        src/intermediate_format/content/RawMessageContentItem.cpp
        src/intermediate_format/content/RawMessageContentItem.h
        src/intermediate_format/content/ItalicTag.cpp
        src/intermediate_format/content/ItalicTag.h
        src/intermediate_format/content/LineBreakTag.cpp
        src/intermediate_format/content/LineBreakTag.h
        src/intermediate_format/content/LinkTag.cpp
        src/intermediate_format/content/LinkTag.h
        src/intermediate_format/content/Markup.h
        src/intermediate_format/content/MediaAttachment.cpp
        src/intermediate_format/content/MediaAttachment.h
        src/intermediate_format/content/RGBColorTag.cpp
        src/intermediate_format/content/RGBColorTag.h
        src/intermediate_format/content/TextSection.cpp
        src/intermediate_format/content/TextSection.h
        src/intermediate_format/content/UnderlineTag.cpp
        src/intermediate_format/content/UnderlineTag.h
        src/intermediate_format/content/YahooAltTag.cpp
        src/intermediate_format/content/YahooAltTag.h
        src/intermediate_format/content/YahooFadeTag.cpp
        src/intermediate_format/content/YahooFadeTag.h
        src/intermediate_format/events/conference/RawAddToConferenceEvent.cpp
        src/intermediate_format/events/conference/RawAddToConferenceEvent.h
        src/intermediate_format/events/conference/RawCreateConferenceEvent.cpp
        src/intermediate_format/events/conference/RawCreateConferenceEvent.h
        src/intermediate_format/events/conference/RawDeclineConferenceEvent.cpp
        src/intermediate_format/events/conference/RawDeclineConferenceEvent.h
        src/intermediate_format/events/conference/RawJoinConferenceEvent.cpp
        src/intermediate_format/events/conference/RawJoinConferenceEvent.h
        src/intermediate_format/events/conference/RawLeaveConferenceEvent.cpp
        src/intermediate_format/events/conference/RawLeaveConferenceEvent.h
        src/intermediate_format/events/file_transfer/RawCancelFileTransferEvent.cpp
        src/intermediate_format/events/file_transfer/RawCancelFileTransferEvent.h
        src/intermediate_format/events/file_transfer/RawOfferFileEvent.cpp
        src/intermediate_format/events/file_transfer/RawOfferFileEvent.h
        src/intermediate_format/events/file_transfer/RawOfferFileGroupEvent.cpp
        src/intermediate_format/events/file_transfer/RawOfferFileGroupEvent.h
        src/intermediate_format/events/file_transfer/RawReceiveFileEvent.cpp
        src/intermediate_format/events/file_transfer/RawReceiveFileEvent.h
        src/intermediate_format/events/file_transfer/RawStartFileTransferEvent.cpp
        src/intermediate_format/events/file_transfer/RawStartFileTransferEvent.h
        src/intermediate_format/events/RawAnswerCallEvent.cpp
        src/intermediate_format/events/RawAnswerCallEvent.h
        src/intermediate_format/events/RawChangeScreenNameEvent.cpp
        src/intermediate_format/events/RawChangeScreenNameEvent.h
        src/intermediate_format/events/RawConnectedEvent.cpp
        src/intermediate_format/events/RawConnectedEvent.h
        src/intermediate_format/events/RawCorruptedMessageEvent.cpp
        src/intermediate_format/events/RawCorruptedMessageEvent.h
        src/intermediate_format/events/RawDisconnectedEvent.cpp
        src/intermediate_format/events/RawDisconnectedEvent.h
        src/intermediate_format/events/RawEEEncryptionAnnouncementEvent.cpp
        src/intermediate_format/events/RawEEEncryptionAnnouncementEvent.h
        src/intermediate_format/events/RawFailableEvent.cpp
        src/intermediate_format/events/RawFailableEvent.h
        src/intermediate_format/events/RawLeaveConversationEvent.cpp
        src/intermediate_format/events/RawLeaveConversationEvent.h
        src/intermediate_format/events/RawLoggingStartedEvent.cpp
        src/intermediate_format/events/RawLoggingStartedEvent.h
        src/intermediate_format/events/RawLoggingStoppedEvent.cpp
        src/intermediate_format/events/RawLoggingStoppedEvent.h
        src/intermediate_format/events/RawMessageEvent.cpp
        src/intermediate_format/events/RawMessageEvent.h
        src/intermediate_format/events/RawMessageSendFailedEvent.cpp
        src/intermediate_format/events/RawMessageSendFailedEvent.h
        src/intermediate_format/events/RawOfferCallEvent.cpp
        src/intermediate_format/events/RawOfferCallEvent.h
        src/intermediate_format/events/RawOfferWebcamEvent.cpp
        src/intermediate_format/events/RawOfferWebcamEvent.h
        src/intermediate_format/events/RawPingEvent.cpp
        src/intermediate_format/events/RawPingEvent.h
        src/intermediate_format/events/RawStartConversationEvent.cpp
        src/intermediate_format/events/RawStartConversationEvent.h
        src/intermediate_format/events/RawStatusChangeEvent.cpp
        src/intermediate_format/events/RawStatusChangeEvent.h
        src/intermediate_format/events/RawUninterpretedEvent.cpp
        src/intermediate_format/events/RawUninterpretedEvent.h
        src/intermediate_format/events/RawWindowOpenedEvent.cpp
        src/intermediate_format/events/RawWindowOpenedEvent.h
        src/intermediate_format/events/RawWindowClosedEvent.cpp
        src/intermediate_format/events/RawWindowClosedEvent.h
        src/intermediate_format/events/RawEvent.cpp
        src/intermediate_format/events/RawEvent.h
        src/intermediate_format/subjects/ApparentSubject.cpp
        src/intermediate_format/subjects/ApparentSubject.h
        src/intermediate_format/subjects/FullySpecifiedSubject.cpp
        src/intermediate_format/subjects/FullySpecifiedSubject.h
        src/intermediate_format/subjects/ImplicitSubject.cpp
        src/intermediate_format/subjects/ImplicitSubject.h
        src/intermediate_format/subjects/SubjectGivenAsAccount.cpp
        src/intermediate_format/subjects/SubjectGivenAsAccount.h
        src/intermediate_format/subjects/SubjectGivenAsScreenName.cpp
        src/intermediate_format/subjects/SubjectGivenAsScreenName.h
        src/intermediate_format/ApparentTime.cpp
        src/intermediate_format/ApparentTime.h
        src/intermediate_format/RawConversation.cpp
        src/intermediate_format/RawConversation.h
        src/protocols/digsby/account_name.cpp
        src/protocols/digsby/account_name.h
        src/protocols/facebook/account_name.cpp
        src/protocols/facebook/account_name.h
        src/protocols/jabber/account_name.cpp
        src/protocols/jabber/account_name.h
        src/protocols/msn/account_name.cpp
        src/protocols/msn/account_name.h
        src/protocols/yahoo/account_name.cpp
        src/protocols/yahoo/account_name.h
        src/protocols/ArchiveFormat.cpp
        src/protocols/ArchiveFormat.h
        src/protocols/FullAccountName.cpp
        src/protocols/FullAccountName.h
        src/protocols/IMProtocol.cpp
        src/protocols/IMProtocol.h
        src/protocols/IMStatus.cpp
        src/protocols/IMStatus.h
        src/protocols/parse_account_generic.cpp
        src/protocols/parse_account_generic.h
        src/utils/external_libs/make_unique.hpp
        src/utils/external_libs/optional.hpp
        src/utils/html/entities.cpp
        src/utils/html/entities.h
        src/utils/html/parse_html_lenient.cpp
        src/utils/html/parse_html_lenient.h
        src/utils/language/invariant.h
        src/utils/language/JavaStyleIterator.h
        src/utils/language/shortcuts.h
        src/utils/qt/shortcuts.h
        src/utils/text/decoding.cpp
        src/utils/text/decoding.h
        src/utils/text/load_text_file.cpp
        src/utils/text/load_text_file.h
        src/utils/text/split_into_lines.cpp
        src/utils/text/split_into_lines.h
        src/utils/time/parse_date_parts.cpp
        src/utils/time/parse_date_parts.h
        src/utils/xml/qdom_utils.cpp
        src/utils/xml/qdom_utils.h
        src/main.cpp
        )

add_executable(uniarchive2 ${SOURCE_FILES})

target_link_libraries(uniarchive2 Qt5::Core Qt5::Xml)
target_include_directories(uniarchive2 PRIVATE src)
target_compile_definitions(uniarchive2 PRIVATE TEST_DATA_DIR=${TEST_DATA_DIR})
